Stor refaktorering til ny versjon av Gradle, Spring og Java Foreløig versjon 20 for Java, skal migrere til 21 så fort Gradle og Temurin images har støtte for det