@@ -1,24 +1,21 @@
 package no.nav.no.registere.testnorge.arbeidsforholdexportapi.domain.v2_1;
 
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-
 import jakarta.xml.bind.JAXBContext;
 import jakarta.xml.bind.JAXBElement;
 import jakarta.xml.bind.JAXBException;
 import jakarta.xml.bind.Unmarshaller;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import no.nav.registre.testnorge.xsd.arbeidsforhold.v2_1.EDAGM;
+
 import java.io.StringReader;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import no.nav.registre.testnorge.xsd.arbeidsforhold.v2_1.EDAGM;
 
 @Slf4j
 @RequiredArgsConstructor
 public class Opplysningspliktig {
-    private final EDAGM edagm;
     private static Unmarshaller unmarshaller;
 
     static {
@@ -30,14 +27,57 @@ public class Opplysningspliktig {
         }
     }
 
+    private final EDAGM edagm;
 
-    @SuppressWarnings("unchecked")
-    private static EDAGM from(String xml, Unmarshaller unmarshaller) throws JAXBException {
-        try (var reader = new StringReader(xml)) {
-            EDAGM edagm = ((JAXBElement<EDAGM>) unmarshaller.unmarshal(reader)).getValue();
-            reader.close();
-            return edagm;
-        }
+    public List<Avvik> toAvvik() {
+        var avviks = new ArrayList<Avvik>();
+        avviks.addAll(
+                getArbeidsforhold()
+                        .stream()
+                        .filter(Arbeidsforhold::hasAvvik)
+                        .map(Arbeidsforhold::getAvvikList)
+                        .flatMap(Collection::stream)
+                        .toList()
+        );
+        avviks.addAll(
+                getPermisjoner()
+                        .stream()
+                        .filter(Permisjon::hasAvvik)
+                        .map(Permisjon::getAvvikList)
+                        .flatMap(Collection::stream)
+                        .toList()
+        );
+
+        avviks.addAll(
+                getInntekter()
+                        .stream()
+                        .filter(Inntekt::hasAvvik)
+                        .map(Inntekt::getAvvikList)
+                        .flatMap(Collection::stream)
+                        .toList()
+        );
+        return avviks;
+    }
+
+    public List<Permisjon> toPermisjoner() {
+        return getPermisjoner()
+                .stream()
+                .filter(value -> !value.hasAvvik())
+                .toList();
+    }
+
+    public List<Arbeidsforhold> toArbeidsforhold() {
+        return getArbeidsforhold()
+                .stream()
+                .filter(value -> !value.hasAvvik())
+                .toList();
+    }
+
+    public List<Inntekt> toInntekt() {
+        return getInntekter()
+                .stream()
+                .filter(value -> !value.hasAvvik())
+                .toList();
     }
 
     public static Opplysningspliktig from(String xml) {
@@ -48,57 +88,12 @@ public class Opplysningspliktig {
         }
     }
 
-    public List<Avvik> toAvvik() {
-        var avviks = new ArrayList<Avvik>();
-        avviks.addAll(
-                getArbeidsforhold()
-                        .stream()
-                        .filter(Arbeidsforhold::hasAvvik)
-                        .map(Arbeidsforhold::getAvvikList)
-                        .flatMap(Collection::stream)
-                        .collect(Collectors.toList())
-        );
-        avviks.addAll(
-                getPermisjoner()
-                        .stream()
-                        .filter(Permisjon::hasAvvik)
-                        .map(Permisjon::getAvvikList)
-                        .flatMap(Collection::stream)
-                        .collect(Collectors.toList())
-        );
-
-        avviks.addAll(
-                getInntekter()
-                        .stream()
-                        .filter(Inntekt::hasAvvik)
-                        .map(Inntekt::getAvvikList)
-                        .flatMap(Collection::stream)
-                        .collect(Collectors.toList())
-        );
-        return avviks;
-    }
-
     private List<Permisjon> getPermisjoner() {
         return getArbeidsforhold()
                 .stream()
                 .map(Arbeidsforhold::getPermisjoner)
                 .flatMap(Collection::stream)
-                .collect(Collectors.toList());
-    }
-
-
-    public List<Permisjon> toPermisjoner() {
-        return getPermisjoner()
-                .stream()
-                .filter(value -> !value.hasAvvik())
-                .collect(Collectors.toList());
-    }
-
-    public List<Arbeidsforhold> toArbeidsforhold() {
-        return getArbeidsforhold()
-                .stream()
-                .filter(value -> !value.hasAvvik())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<Arbeidsforhold> getArbeidsforhold() {
@@ -113,13 +108,6 @@ public class Opplysningspliktig {
         return arbeidsforholds;
     }
 
-    public List<Inntekt> toInntekt() {
-        return getInntekter()
-                .stream()
-                .filter(value -> !value.hasAvvik())
-                .collect(Collectors.toList());
-    }
-
     private List<Inntekt> getInntekter() {
         List<Inntekt> inntekts = new ArrayList<>();
         var leveranse = this.edagm.getLeveranse();
@@ -130,5 +118,12 @@ public class Opplysningspliktig {
                 })
         );
         return inntekts;
+    }
+
+    @SuppressWarnings("unchecked")
+    private static EDAGM from(String xml, Unmarshaller unmarshaller) throws JAXBException {
+        try (var reader = new StringReader(xml)) {
+            return ((JAXBElement<EDAGM>) unmarshaller.unmarshal(reader)).getValue();
+        }
     }
 }
