@@ -9,7 +9,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -23,7 +22,7 @@ public class ArbeidsforholdService {
         return arbeidsforhold == null ? null : arbeidsforhold
                 .stream()
                 .map(Arbeidsforhold::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
